2004-09-02  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWApplication+Defaults.m
	(cgiAdaptorURL, setCGIAdaptorURL): Fix naming to conform to key
	value coding methods.
	
2004-09-01  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWDeclarationParser.m:
	(parseDeclarationString:named:inFrameworkNamed:): Use -base's
	version of md5 methods instead of adding gscrypt dependency.

	* GSWeb.framework/GSWApplication+Defaults.m
	(_lockDefaultEditingContext, _setLockDefaultEditingContext)
	(_allowsCacheControlHeader, _setAllowsCacheControlHeader)
	Fix naming to conform to key value coding methods.
	
2004-09-01   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWExtensions.framework/GSWCollapsibleComponentContent.m: 
		o removed unused methods
		o added -isDisabled
		o added -shouldDisplay
	* GSWExtensions.framework/GSWCollapsibleComponentContent.gswc/GSWCollapsibleComponentContent.gswd: 
		o added ShouldDisplay
	* GSWExtensions.framework/GSWCollapsibleComponentContent.gswc/GSWCollapsibleComponentContent.html: 
		o added ShouldDisplay
	* GSWExtensionsGSW.framework/GSWCacheElement.m: 
		o fix keys array end
	* GSWeb.framework/GSWApplication.m:
		o use GSWIntToNSString instead of string formatting
	* GSWeb.framework/GSWComponent.m:
		o logs
	* GSWeb.framework/GSWDeclarationParser.h:
		o added exception names constants
		o added GSWDeclarationFormatException
	* GSWeb.framework/GSWDeclarationParser.m:
		o added exception names constants
		o added GSWDeclarationFormatException
		o added declaration caching (work in progress)
		o use GSWDeclarationFormatException instead of NSException
	* GSWeb.framework/GSWDefaultAdaptor.m:	
		o use GSWIntToNSString instead of string formatting
	* GSWeb.framework/GSWDisplayGroup.h/.m:
		o added -addQueryOperator:forKey:
	* GSWeb.framework/GSWDynamicURLString.h/.m:
		o chnages to use IMPs and buffers
		o use GSWIntToNSString instead of string formatting
	* GSWeb.framework/GSWElementIDString.m: