@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!DOCTYPE gsdoc PUBLIC "-//GNUstep//DTD gsdoc 0.6.6//EN" "http://www.gnustep.org/gsdoc-0_6_6.xml">
+<!DOCTYPE gsdoc PUBLIC "-//GNUstep//DTD gsdoc 1.0.1//EN" "http://www.gnustep.org/gsdoc-1_0_1.dtd">
 <gsdoc base="gsweb">
   <head>
     <title>GNUstepWeb Documentation</title>
@@ -8,26 +8,31 @@
       <url url="http://www.orange-concept.com"/>
       <desc></desc>
     </author>
+    <author name="David Ayers">
+      <email address="d.ayers@inode.at"/>
+      <url url="http://www.gnustep.org/developers/whoiswho.html"/>
+      <desc></desc>
+    </author>
     <version>0.1</version>
     <date>24 august, 2000</date>
     <abstract>This documents GNUstepWeb</abstract>
     <copy>2000 Free Software Foundation, Inc.</copy>
   </head>
-
   <body>
     <front>
       <contents/>
-
-		<chapter>
-		  <heading>Introduction</heading>
-		  <p>GNUstepWeb is a library which was designed to be compatible with <uref url="http://gemma.apple.com/techpubs/webobjects/">WebObjects</uref> 4.x, developed by <uref url="http://www.next.com">NeXT</uref> (now <uref url="http://www.apple.com">Apple</uref>) Inc.</p>
-		  <p>GNUstepWeb web site is <uref url="http://www.gnustepweb.org">here</uref></p>
-		  <p>GNUstepWeb is based on <prjref prjname="gnustep-base">GNUstep</prjref>. GNUstep web site is <uref url="http://www.gnustep.org">here</uref></p>
-		</chapter>
+	<chapter>
+	  <heading>Introduction</heading>
+	  <p>GNUstepWeb is a library which was designed to be compatible with <uref url="http://gemma.apple.com/techpubs/webobjects/">WebObjects</uref> 4.x, developed by <uref url="http://www.next.com">NeXT</uref> (now <uref url="http://www.apple.com">Apple</uref>) Inc.</p>
+	  <p>GNUstepWeb web site is <uref url="http://www.gnustepweb.org">here</uref></p>
+	  <p>GNUstepWeb is based on <prjref prjname="gnustep-base">GNUstep</prjref>. GNUstep web site is <uref url="http://www.gnustep.org">here</uref></p>
+	</chapter>
     </front>
     <chapter>
-      <heading>...</heading>
-      <p></p>
+      <heading>Subprojects</heading>
+      <p><uref url="GSWeb/gsweb.html">GSWeb</uref></p>
+      <p><uref url="GSWExtensions/gswextensions.html">GSWExtentions</uref></p>
+      <p><uref url="GSWExtensionsGSW/gswextensionsgsw.html">GSExtensionsGSW</uref></p>
     </chapter>
 
     <back>
